# diploma4

./: Dockerfile  docker-compose-ci.yaml  pyproject.toml
todolist/: settings.py
