[tool.poetry]
name = "diploma5"
version = "0.1.0"
description = ""
authors = ["RafPC <g.raf1279@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.2.0"
django-filter = "^23.2"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"
mypy = "^1.5.1"
pydantic = "^2.2.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
